force-app/main/default/objects/HOSP_SMB_QuickBase_Project_Overview__c/HOSP_SMB_QuickBase_Project_Overview__c.object-meta.xml
<CustomObject>
    <label>HOSP SMB QuickBase Project Overview</label>
    <nameField>
        <label>HOSP SMB QuickBase Project Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HOSP SMB QuickBase Project Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>