force-app/main/default/objects/HOSP_SMB_QuickBase_Project_Overview__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>