force-app/main/default/objects/HOSP_SMB_QuickBase_Project_Overview__c/fields/Planned_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Work_Hours__c</fullName>
    <label>Planned Work (Hours)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>