force-app/main/default/objects/HOSP_SMB_QuickBase_Project_Overview__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>